--- a/resources/tools/presentation/specification.yaml
+++ b/resources/tools/presentation/specification.yaml
@@ -293,6 +293,7 @@
         - 43  # NDRPDR sel
         - 38  # NDRPDR sel
         - 7   # NDRPDR sel
+        - 78  # nf-density-sel
         - 83  # nf-density-sel
 
     plot-vpp-nfv-2n-skx-mrr:
@@ -415,6 +416,7 @@
         - 12  # NDRPDR sel
         - 20  # NDRPDR sel
         - 14  # NDRPDR sel
+        - 21  # NDRPDR sel
 
     plot-vpp-hdrh-lat-3n-tsh:
       csit-vpp-perf-report-iterative-2005-3n-tsh:
@@ -580,6 +582,7 @@
         - 20  # perf-full-3n-skx-ip4_IX
         - 24  # perf-full-3n-skx-ip6_I
         - 25  # perf-full-3n-skx-ip6_II
+        - 21  # perf-full-3n-skx-ip4tunnels-I
         - 22  # perf-full-3n-skx-ip4tunnels-II
         - 23  # perf-full-3n-skx-ip4tunnels-III
         - 26  # perf-full-3n-skx-ip6tunnels-I
@@ -588,9 +591,14 @@
         - 30  # perf-full-3n-skx-l2_IV
         - 32  # perf-full-3n-skx-l2_VI
         - 33  # perf-full-3n-skx-l2_VII
+        - 34  # perf-full-3n-skx-l2_VIII
         - 35  # perf-full-3n-skx-l2_IX
         - 36  # perf-full-3n-skx-l2_X
         - 37  # perf-full-3n-skx-l2_XI
+        - 38  # perf-full-3n-skx-memif
+        - 39  # perf-full-3n-skx-srv6-I
+        - 40  # perf-full-3n-skx-srv6-II
+        - 43  # perf-full-3n-skx-vhost-III
 
     vpp-perf-results-2n-skx:
       # TODO: Add data:
@@ -853,6 +861,7 @@
 #        - 43  # NDRPDR sel
 #        - 38  # NDRPDR sel
 #        - 7   # NDRPDR sel
+#        - 78  # nf-density-sel
 #        - 83  # nf-density-sel
 
     vpp-performance-changes-2n-clx-ref:
@@ -884,6 +893,7 @@
         - 62  # NDRPDR sel env 4
         - 63  # NDRPDR sel env 4
         - 64  # NDRPDR sel env 4
+        - 66  # NDRPDR sel env 4
 
     vpp-performance-changes-2n-dnv-h1:
       csit-vpp-perf-verify-1908-2n-dnv:
@@ -991,6 +1001,7 @@
         - 12  # NDRPDR sel
         - 20  # NDRPDR sel
         - 14  # NDRPDR sel
+        - 21  # NDRPDR sel
     vpp-performance-changes-3n-tsh-cmp-2:
       # TODO: Add data:
       csit-vpp-perf-report-iterative-2005-3n-tsh:
@@ -2262,6 +2273,7 @@
       - 20  # perf-full-3n-skx-ip4_IX
       - 24  # perf-full-3n-skx-ip6_I
       - 25  # perf-full-3n-skx-ip6_II
+      - 21  # perf-full-3n-skx-ip4tunnels-I
       - 22  # perf-full-3n-skx-ip4tunnels-II
       - 23  # perf-full-3n-skx-ip4tunnels-III
       - 26  # perf-full-3n-skx-ip6tunnels-I
@@ -2270,9 +2282,14 @@
       - 30  # perf-full-3n-skx-l2_IV
       - 32  # perf-full-3n-skx-l2_VI
       - 33  # perf-full-3n-skx-l2_VII
+      - 34  # perf-full-3n-skx-l2_VIII
       - 35  # perf-full-3n-skx-l2_IX
       - 36  # perf-full-3n-skx-l2_X
       - 37  # perf-full-3n-skx-l2_XI
+      - 38  # perf-full-3n-skx-memif
+      - 39  # perf-full-3n-skx-srv6-I
+      - 40  # perf-full-3n-skx-srv6-II
+      - 43  # perf-full-3n-skx-vhost-III
 
     csit-vpp-perf-verify-1908_1-2n-skx:
       - 39  # NDRPDR sel - new1908.1
@@ -2324,6 +2341,7 @@
       - 66  # Reconf
       - 49  # Soak
       - 54  # Soak
+      - 78  # nf-density-sel
       - 83  # nf-density-sel
     csit-vpp-perf-report-coverage-2005-2n-skx:
       - 11  # perf-full-2n-skx-ip4_I
@@ -2374,6 +2392,7 @@
       - 62  # NDRPDR sel env 4
       - 63  # NDRPDR sel env 4
       - 64  # NDRPDR sel env 4
+      - 66  # NDRPDR sel env 4
       - 12  # MRR
       - 42  # Reconf
       - 45  # Reconf
@@ -2440,6 +2459,7 @@
       - 12  # NDRPDR sel
       - 20  # NDRPDR sel
       - 14  # NDRPDR sel
+      - 21  # NDRPDR sel
       - 23  # NDRPDR sel env 4
       - 10  # MRR sel
 
