--- a/resources/tools/presentation/rca/rca-2n-skx-2t1c-pdr-rca2.yaml
+++ b/resources/tools/presentation/rca/rca-2n-skx-2t1c-pdr-rca2.yaml
@@ -1,35 +1,43 @@
-64b-2t1c-avf-dot1q-ip4base: 10
-64b-2t1c-avf-ethip4-ip4base: 10
-64b-2t1c-avf-ethip4-ip4scale200k: 7
-64b-2t1c-avf-ethip4-ip4scale20k: 7
-64b-2t1c-avf-ethip4-ip4scale2m: 7
-64b-2t1c-dot1q-l2bdbasemaclrn-eth-2vhostvr1024-1vm-vppl2xc: 8
-64b-2t1c-dot1q-l2xcbase: 5
-64b-2t1c-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm-vppl2xc: 8
-64b-2t1c-eth-l2xcbase-eth-2memif-1dcr: 11
-64b-2t1c-eth-l2xcbase-eth-2vhostvr1024-1vm-vppl2xc: 8
-64b-2t1c-eth-l2xcbase-eth-2vhostvr1024-1vm: 9
-64b-2t1c-ethip4-ip4base-eth-2memif-1dcr: 11
-64b-2t1c-ethip4udp-ip4base-nat44: 6
+64b-2t1c-avf-ethip4udp-ip4base-iacl50sf-10kflows: 1
+64b-2t1c-avf-ethip4udp-ip4base-oacl50sf-10kflows: 1
+78b-2t1c-avf-ethip6-ip6scale200k: 1
+64b-2t1c-avf-eth-l2bdscale10kmaclrn: 1
+64b-2t1c-avf-eth-l2bdscale100kmaclrn: 1
+64b-2t1c-avf-eth-l2xcbase-eth-2memif-1dcr: 1
+78b-2t1c-avf-ethip6-ip6scale2m: 1
+78b-2t1c-ethip6-ip6scale2m: 1
+78b-2t1c-ethip6-ip6scale200k: 1
+64b-2t1c-eth-l2bdscale100kmaclrn: 1
+64b-2t1c-eth-l2bdscale10kmaclrn: 1
+114b-2t1c-avf-ethip4vxlan-l2bdbasemaclrn-eth-iacldstbase-noacl-2vhostvr1024-1vm: 1
+64b-2t1c-dot1q-l2bdbasemaclrn-eth-2vhostvr1024-1vm-vppl2xc: 1
+78b-2t1c-avf-ethip6-ip6scale20k: 1
+78b-2t1c-ethip6-ip6scale20k: 1
+114b-2t1c-avf-ethip4vxlan-l2bdbasemaclrn-eth-iacldstbase-aclpermit-2vhostvr1024-1vm: 1
+64b-2t1c-eth-l2bdbasemaclrn-eth-2vhostvr1024-1vm: 1
+64b-2t1c-dot1q-l2bdbasemaclrn-eth-2memif-1dcr: 1
+64b-2t1c-avf-ethip4udp-ip4base-nat44: 1
+64b-2t1c-eth-l2bdbasemaclrn-eth-2memif-1dcr: 1
+64b-2t1c-avf-dot1q-l2bdbasemaclrn-eth-2memif-1dcr: 1
+64b-2t1c-avf-eth-l2xcbase: 1
+64b-2t1c-ethip4-ip4base-eth-2memif-1dcr: 1
+64b-2t1c-avf-dot1q-l2bdbasemaclrn-gbp: 1
+64b-2t1c-eth-l2xcbase-eth-2vhostvr1024-1vm: 1
+
+64b-2t1c-ethip4-ip4scale20k-rnd: 2
+64b-2t1c-ethip4-ip4scale200k-rnd: 2
+64b-2t1c-avf-ethip4-ip4scale200k-rnd: 2
+64b-2t1c-avf-dot1q-l2xcbase: 3
+64b-2t1c-ethip4-ip4scale2m-rnd: 2
+64b-2t1c-avf-ethip4-ip4scale2m-rnd: 2
+
 # Multiline string, empty lines (or \n) are required, see https://yaml-multiline.info/
-footnote: "[5] OPEN, dot1q-l2xcbase progression, retro-inspection of
-    weekly ndrpdr tests points to ge-22805, automated bisect script does
-    not work due to frequent API changes, [CSIT-1699], [CSIT-1705].
+footnote: "[1] OPEN, various progressions, causes unknown.
+    Open Jira task possibly breaking to sub-tasks as bisect founds different causes.
 
-    [6] DONE, ip4base-nat44 regression, ge-23963
-    (https://gerrit.fd.io/r/c/vpp/+/23963#message-044278e6_752c3327).
+    [2] OPEN, related to unpinning random seed in CSIT gedaa48bd. Open Jira task,
+    verify pinned test have good performance (neutral or some progression of [1]).
 
-    [7] WIP, avf-ip4scale regression, CANDIDATE(S) before ge-22699,
-    [CSIT-1699], [CSIT-1706].
-
-    [8] OPEN, VPP vhost-user with VPP-inside-VM higher than before stdev
-    of PDR throughput, under investigation, [CSIT-1699], [CSIT-1704].
-
-    [9] WIP, vhost-user with testpmd-in-VM progression, CANDIDATE(S)
-    before 22277, [CSIT-1699], [CSIT-1707].
-
-    [10] WIP, avf-ip4base regression, CANDIDATE(S) range
-    ge-18361..ge-24505, [CSIT-1699], [CSIT-1708].
-
-    [11] DONE, memif regression, CANDIDATE(S) confirmed ge-23801.
+    [3] OPEN, regression in avf-dot1q-l2xcbase. Does not match PDR trending,
+    investigation needed.
 "
